# xrootd-multiuser

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCap.cmake  FindXrootd.cmake
configs/: 60-osg-multiuser.cfg  checksum-export-lib-symbols  cmsd-privileged@.service  export-lib-symbols  xrootd-multiuser.spec  xrootd-privileged@.service
rpm/: xrootd-multiuser.spec
src/: GIDHandler.cc  GIDHandler.hh  MultiuserDirectory.hh  MultiuserFile.hh  MultiuserFileSystem.cc  MultiuserFileSystem.hh  UserSentry.hh  XrdChecksum.cc  XrdChecksum.hh  XrdChecksumCalc.cc  XrdChecksumInit.cc  multiuser.cpp
